# YGL

./: .gitignore  CMakeLists.txt  README.md  compil.err  compil.sh  compil.txt  moultipasse.sh  push.sh  readme.md
assets/shaders/: composite.frag  composite.vert  spherical_propagate.frag  spherical_propagate.vert
cmake/: FindGLEW.cmake  FindGLFW.cmake
examples/batch_render/: main.cpp
examples/test_raytracing/: main.cpp
examples/viewer/: main.cpp
include/: stb_image.hpp  ygl.hpp
include/core/: bounding_box.hpp  camera.hpp  light.hpp  mesh.hpp  object3d.hpp  scene.hpp  vertex.hpp
include/loaders/: gltf_loader.hpp  loader.hpp  md2_format.hpp  md2_loader.hpp  md3_loader.hpp  md5_loader.hpp  obj_loader.hpp
include/materials/: material.hpp  texture.hpp
include/math/: Mat4.hpp  MathUtils.hpp  Quat.hpp  Ray.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  mat4.hpp  math_utils.hpp  quat.hpp  ray.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/render/: bvh.hpp  deferred_renderer.hpp  gbuffer.hpp  path_tracing_renderer.hpp  renderer.hpp  spherical_renderer.hpp
include/scene/: animation.hpp  light.hpp  scene.hpp
include/utils/: file_utils.hpp  image_utils.hpp
src/core/: bounding_box.cpp  camera.cpp  light.cpp  mesh.cpp  object3d.cpp  scene.cpp
src/loaders/: gltf_loader.cpp  loader.cpp  md2_loader.cpp  md3_loader.cpp  md5_loader.cpp  obj_loader.cpp
src/materials/: material.cpp  texture.cpp
src/math/: Mat4.cpp  Quat.cpp  Ray.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp  mat4.cpp  quat.cpp  ray.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/render/: bvh.cpp  deferred_renderer.cpp  gbuffer.cpp  hybrid_renderer.cpp  path-tracing_rendere.cpp  spherical_gbuffer.cpp  spherical_renderer.cpp
src/scene/: animation.cpp  light.cpp  scene.cpp
src/utils/: file_utils.cpp  image_utils.cpp
